<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/image2"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonts5"
            android:text="@string/BrandB"
            android:textColor="@color/red"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonts5"
            android:text="@string/Brand"
            android:textColor="@color/White"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="111dp"
        android:layout_height="109dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="137dp"
        android:fontFamily="@font/fonts5"
        android:text="@string/BrandLogin"
        android:textColor="@color/White"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="459dp"
        android:ems="10"
        android:hint="@string/CompanyNameInput"
        android:inputType="textPersonName"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="414dp"
        android:ems="10"
        android:hint="@string/EmailOfCompany"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="369dp"
        android:ems="10"
        android:hint="@string/BrandPhoneNumber"
        android:inputType="phone"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextPostalAddress2"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="362dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="324dp"
        android:ems="10"
        android:hint="@string/BrandAddress"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="407dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="279dp"
        android:ems="10"
        android:hint="@string/Country"
        android:inputType="textPersonName"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="407dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="279dp"
        android:ems="10"
        android:hint="@string/State"
        android:inputType="textPersonName"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="234dp"
        android:ems="10"
        android:hint="@string/City"
        android:inputType="textPersonName"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="234dp"
        android:ems="10"
        android:hint="@string/Pincode"
        android:inputType="number"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="543dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="153dp"
        android:background="@color/White"
        android:text="@string/RegisterButton"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="130dp"
        android:layout_marginTop="643dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="61dp"
        android:text="@string/GoBack"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>