<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/image2"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonts5"
            android:text="@string/Collob"
            android:textColor="@color/red"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonts5"
            android:text="@string/Creator"
            android:textColor="@color/White"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="177dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/fonts5"
        android:text="@string/Login"
        android:textColor="@color/White"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="454dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:textColorHint="@color/White"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="381dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/White"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="317dp"
        android:background="@color/White"
        android:text="@string/Login"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="105dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="271dp"
        android:text="@string/ForgetPassword"
        android:textColor="@color/White"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="40dp"
        android:text="@string/doNotHaveAccount"
        android:textColor="@color/White"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="253dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="40dp"
        android:text="@string/signIn"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="10dp"
        android:text="@string/GoBack"
        android:textColor="@color/White"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>