<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/image2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/fonts5"
    android:text="@string/Collob"
    android:textColor="@color/red"
    android:textSize="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonts5"
            android:text="@string/CompanyName"
            android:textColor="@color/White"
            android:textSize="35sp" />
    </LinearLayout>
    <Button
        android:id="@+id/creator"
        android:layout_width="295dp"
        android:layout_height="65dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="420dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/Button1"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="398dp"
        android:background="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="381dp"
        android:text="@string/OR"
        android:textColor="@color/White"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="398dp"
        android:background="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Brand"
        android:layout_width="295dp"
        android:layout_height="65dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="347dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/Button2"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="141dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="139dp"
        android:text="@string/NeedHelp"
        android:textColor="@color/White"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
